name not aligned correctly

--- a/src/app/torrents-table/torrents-table.component.css
+++ b/src/app/torrents-table/torrents-table.component.css
@@ -34,7 +34,6 @@ progress-bar {
 .mat-column-Name {
     flex: 0 0 35% !important;
     overflow-wrap: break-word;
-    overflow: scroll;
 
     word-wrap: break-word;
     word-break: break-word;
